components/terraform/igw.tf
# ===================================================================================================================
#  RESOURCE IGW
# ===================================================================================================================
# ===================================================================================================================
# VARIABLES
# ===================================================================================================================
variable "create_igw" {
  description = "Create an internet gateway if needed."
  default     = {}
}
# ----------------------------------------------------------------------------------------------------------------------
# Create Internet Gateway
# ----------------------------------------------------------------------------------------------------------------------
resource "aws_internet_gateway" "env_igw" {
  count  = var.create_igw ? 1 : 0
  vpc_id = aws_vpc.env_vpc[0].id

  tags = merge(
    local.default_tags,
    {
      "Name" = "${local.name_prefix}-igw"
    },
  )
}
