components/terraform/ngw.tf
# ======================================================================================================================
#  VARIABLE
# ======================================================================================================================
variable "create_ngw" {
  description = "This flag used to create or disable nat gateway in different accounts"
  default     = ""
}
# ======================================================================================================================
#  RESOURCES
# ======================================================================================================================
#-----------------------------------------------------------------------------------------------------------------------
# Create EIP
#-----------------------------------------------------------------------------------------------------------------------
resource "aws_eip" "env_eip" {
  vpc = true

  tags = merge(
    local.default_tags,
    {
      "Name" = "${local.name_prefix}-ngw-eip"
    }
  )
}
#-----------------------------------------------------------------------------------------------------------------------
# Create nat gateway
#-----------------------------------------------------------------------------------------------------------------------
resource "aws_nat_gateway" "env_nat" {
  count         = var.create_ngw == true ? 1 : 0
  allocation_id = aws_eip.env_eip.id
  subnet_id     = aws_subnet.env_subnet["nat_public_subnet"].id

  tags = merge(
    local.default_tags,
    {
      "Name" = "${local.name_prefix}-ngw"
    }
  )
  depends_on = [aws_internet_gateway.env_igw]
}
